# MimicWX-Linux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
adapter/: MimicWX.js
docker/: dbus-mimicwx.conf  extract_key.py  start.sh
src/: api.rs  atspi.rs  chatwnd.rs  config.rs  console.rs  db.rs  input.rs  main.rs  wechat.rs
