[package]
name = "mimicwx"
version = "0.5.1"
edition = "2021"
description = "Zero-risk WeChat automation framework for Linux via AT-SPI2 + X11 XTEST + SQLCipher"
license = "MIT"

[[bin]]
name = "mimicwx"
path = "src/main.rs"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
anyhow = "1"
arc-swap = "1"
md5 = "0.7"
quick-xml = "0.37"
zstd = "0.13"
toml = "0.8"
base64 = "0.22"

# ================================================================
# Linux-only dependencies (AT-SPI2, DBus, X11 XTEST)
# ================================================================
[target.'cfg(target_os = "linux")'.dependencies]
# D-Bus communication (pure Rust)
zbus = { version = "5", default-features = false, features = ["tokio"] }
# AT-SPI2 accessibility (built on zbus)
atspi = { version = "0.25", features = ["tokio"] }
# X11 input injection (XTEST extension)
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
# SQLCipher database access (bundled with vendored OpenSSL)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# fanotify file system monitoring (PID-aware, replaces inotify)
fanotify-rs = "0.3"
# libc: raw terminal mode (termios) for interactive console
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
